# adim

./: .env.example  .gitignore  Dockerfile  README.md  adim-api.yaml  adm-api.yaml  awm-api.yaml  codemeta.json  conftest.py  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: main.yaml  sqaaas.yaml
adim/: __init__.py  __main__.py  authorization.py
adim/models/: __init__.py  allocation.py  apps.py  deployment.py  page.py  tool.py
adim/oidc/: client.py
adim/routers/: __init__.py  allocations.py  applications.py  deployments.py  service.py  tools.py
adim/test/: test_allocations.py  test_applications.py  test_deployments.py  test_oidc.py  test_service.py  test_tools.py
adim/utils/: __init__.py  db.py  deployment_manager.py  node_registry.py
adim/utils/allocation/: allocation_store.py  allocation_store_db.py  allocation_store_vault.py
adim/utils/application/: app_store.py  git_app_store.py  rc_app_store.py  repository.py
adim/utils/tool/: git_tool_store.py  rc_tool_store.py  repository.py  tool_store.py
adm/: __init__.py  __main__.py  authorization.py
adm/models/: allocation.py  deployment.py  page.py
adm/oidc/: client.py
adm/routers/: __init__.py  allocations.py  deployments.py  service.py  tools.py
adm/test/: test_allocations.py  test_deployments.py  test_oidc.py  test_service.py  test_tools.py
adm/utils/: deployment_manager.py  node_registry.py
adm/utils/allocation/: allocation_store.py  allocation_store_db.py  allocation_store_vault.py
adm/utils/tool/: git_tool_store.py  rc_tool_store.py  tool_store.py
awm/: __init__.py  __main__.py  authorization.py
awm/models/: allocation.py  deployment.py
awm/oidc/: client.py
awm/routers/: __init__.py  allocations.py  deployments.py  service.py  tools.py
awm/test/: test_allocations.py  test_deployments.py  test_oidc.py  test_tools.py
awm/utils/: __init__.py  allocation_store_db.py  allocation_store_vault.py  deployment_manager.py  git_tool_store.py  node_registry.py  rc_tool_store.py
awm/utils/allocation/: allocation_store.py  allocation_store_db.py  allocation_store_vault.py
awm/utils/tool/: git_tool_store.py  rc_tool_store.py  tm_tool_store.py  tool_store.py
robot-tests/: README.md  env-template.yaml
robot-tests/resources/: resources.robot
robot-tests/tests/: im-api.robot
